--- a/package.json
+++ b/package.json
@@ -23,5 +23,13 @@
     "morgan": "~1.9.1",
     "react-toggle-dark-mode": "^1.1.1",
     "use-local-storage": "^3.0.0"
+  },
+  "devDependencies": {
+    "@types/config": "^3.3.3",
+    "@types/cookie-parser": "^1.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/http-errors": "^2.0.4",
+    "@types/morgan": "^1.9.9"
   }
 }
