--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/http-errors": "^2.0.4",
-    "@types/morgan": "^1.9.9"
+    "@types/morgan": "^1.9.9",
+    "stylelint-order": "^6.0.4"
   }
 }
